--- a/test.html
+++ b/test.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="test.css"/>
 		<title>test</title>
 		<script src="test.js"></script>
 	</head>
 	<body>
-		<div>test</div>
+		<div id="out" class="monospace">You need JavaScript to use this web site.</div>
 	</body>
 </html>
